--- a/app/src/main/res/layout/ui_list_view_act.xml
+++ b/app/src/main/res/layout/ui_list_view_act.xml
@@ -34,13 +34,13 @@
 
 
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 
 
 
