--- a/app/src/main/res/layout/wifi_act.xml
+++ b/app/src/main/res/layout/wifi_act.xml
@@ -31,13 +31,13 @@
 
     </cn.oaui.view.listview.DataListView>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 
 
 
