--- a/fileview/src/main/res/values/styles.xml
+++ b/fileview/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
 
         <item name="windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:colorBackground">@color/white</item>
     </style>
 
 
@@ -30,4 +31,8 @@
         <item name="android:gravity">center</item>
         <item name="android:textSize">12dp</item>
     </style>
+
+
+
+
 </resources>
