--- a/fileview/src/main/res/layout/webview_tail.xml
+++ b/fileview/src/main/res/layout/webview_tail.xml
@@ -71,7 +71,7 @@
 
 
     <FrameLayout
-        android:id="@+id/ln_tab"
+        android:id="@+id/fr_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -94,6 +94,7 @@
 
 
         <TextView
+            android:id="@+id/tv_frame_num"
             android:layout_width="wrap_content"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
