--- a/fileview/src/main/res/values/styles.xml
+++ b/fileview/src/main/res/values/styles.xml
@@ -6,9 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+        <item name="android:colorControlNormal">@color/colorControlNormal</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:fitsSystemWindows">true</item>
         <item name="android:colorBackground">@color/white</item>
     </style>
 
